--- a/.gitignore
+++ b/.gitignore
@@ -394,6 +394,6 @@ rsconnect/
 
 ### R.Bookdown Stack ###
 # R package: bookdown caching files
-/*_files/
+# /*_files/
 
 # End of https://www.toptal.com/developers/gitignore/api/r,latex,macos
